style(css): reorganize and update CSS imports for better structure
fix(csrf): add @NonNull annotations and simplify shouldNotFilter method

docs(landing-view): add detailed javadoc for LandingView class and constructor

docs(deck-edit-dialog): add comprehensive javadoc for DeckEditDialog class and methods

fix(user-entity): remove length constraint from passwordHash column

refactor(flashcard-service): replace Collectors.toList() with Stream.toList()

refactor(stats-jpa-adapter): replace Collectors.toList() with Stream.toList() and fix deckIds mapping

docs(auth-facade): add detailed class and method javadocs including password validation and authentication

feat(deck-facade): add deleteDeckWithConfirmation method with server-side validation

style(deck-daily-stats-entity): add @SuppressWarnings("unused") to version getter/setter

style(known-card-entity): add @SuppressWarnings("unused") to getCardId method

docs(public-layout): add class and method javadocs describing layout structure and behavior

docs(user-jpa-adapter): add detailed class and method javadocs for entity-to-model conversion and CRUD operations

refactor(user-jpa-adapter): replace Collectors.toList() with Stream.toList()

refactor(flashcard-jpa-adapter): replace Collectors.toList() with Stream.toList()

refactor(deck-jpa-adapter): replace Collectors.toList() with Stream.toList()

fix(app-i18n-provider): use Locale.forLanguageTag for Russian and Spanish locales

style(css): add hero and accent size tokens to settings/tokens.css