@@ -3,7 +3,6 @@ package org.apolenkov.application.infrastructure.repository.jpa.adapter;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.apolenkov.application.domain.port.RoleAuditRepository;
 import org.apolenkov.application.infrastructure.repository.jpa.entity.RoleAuditEntity;
 import org.apolenkov.application.infrastructure.repository.jpa.springdata.RoleAuditJpaRepository;
@@ -41,7 +40,7 @@ public class RoleAuditJpaAdapter implements RoleAuditRepository {
                         parseRoles(e.getRolesBefore()),
                         parseRoles(e.getRolesAfter()),
                         e.getChangedAt()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Set<String> parseRoles(String rolesString) {
